JumpScript/tests/baselines/reference/objectLiteralErrorsES3.errors.txt
tests/cases/conformance/expressions/objectLiterals/objectLiteralErrorsES3.jump(1,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/expressions/objectLiterals/objectLiteralErrorsES3.jump(2,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/expressions/objectLiterals/objectLiteralErrorsES3.jump(3,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/expressions/objectLiterals/objectLiteralErrorsES3.jump(3,40): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/conformance/expressions/objectLiterals/objectLiteralErrorsES3.jump (4 errors) ====
    var e1 = { get a() { return 4; } };
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    var e2 = { set a(n) { } };
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    var e3 = { get a() { return ''; }, set a(n) { } };
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                                           ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
    